Alterações no projeto e configuração de dependências

--- a/ocorrencias-api/pom.xml
+++ b/ocorrencias-api/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bitbucket.diego-roberto</groupId>
-	<artifactId>desafio-ocorrencias</artifactId>
+	<artifactId>ocorrencias-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>desafio-ocorrencias</name>
-	<description>desafio-ocorrencias</description>
+	<name>ocorrencias-api</name>
+	<description>ocorrencias-api</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -48,16 +48,9 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-starter-jdbc-postgresql</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-starter-storage</artifactId>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.13</version>
 		</dependency>
 
 		<dependency>
@@ -87,17 +80,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.azure.spring</groupId>
-				<artifactId>spring-cloud-azure-dependencies</artifactId>
-				<version>${spring-cloud-azure.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
