--- a/ocorrencias-api/src/main/resources/application.properties
+++ b/ocorrencias-api/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=true
 
 # MinIO configuration
-minio.url=http://localhost:9000
-#minio.url=http://minio:9000
+#minio.url=http://localhost:9000
+minio.url=http://minio:9000
 minio.access.name=minyAccess
 minio.access.secret=minySecret
 minio.bucket.name=ocorrencias
